[!refactor] fix jwt issue, add create user api
